# gtab

./: .gitignore  CMakeLists.txt  GTABConfig.h.in  pack.sh
src/: CMakeLists.txt  application.cpp  application.h  cmake_install.cmake  db.cpp  db.h  main.cpp
src/logic/: CMakeLists.txt  cmake_install.cmake  usuario.cpp  usuario.h
src/utils/: CMakeLists.txt  cmake_install.cmake  utils.cpp  utils.h
src/widgets/: CMakeLists.txt  HomeWidget.cpp  HomeWidget.h  MenuWidget.cpp  MenuWidget.h  RecordesWidget.cpp  RecordesWidget.h  SomaFacilWidget.cpp  SomaFacilWidget.h
www/resources/: font-awesome  tiny_mce
www/resources/themes/bootstrap/3/: Supernice.min.css  app.css
